[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/admin/sound_row.gd" id="1"]

[node name="SoundRow" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 36)
theme_override_constants/separation = 8
script = ExtResource("1")

[node name="PlayButton" type="Button" parent="."]
layout_mode = 2
custom_minimum_size = Vector2(36, 0)
text = "â–¶"
flat = true

[node name="NameLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="NameEdit" type="LineEdit" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
custom_minimum_size = Vector2(0, 28)

[node name="VolumeSlider" type="HSlider" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
custom_minimum_size = Vector2(80, 0)
min_value = 0.0
max_value = 2.0
step = 0.05
value = 1.0

[node name="VolumeLabel" type="Label" parent="."]
layout_mode = 2
custom_minimum_size = Vector2(48, 0)
text = "100%"
theme_override_font_sizes/font_size = 12
horizontal_alignment = 2

[node name="RenameButton" type="Button" parent="."]
layout_mode = 2
text = "Rename"
flat = true
theme_override_font_sizes/font_size = 12

[node name="DeleteButton" type="Button" parent="."]
layout_mode = 2
text = "Delete"
flat = true
theme_override_colors/font_color = Color(0.95, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 12
